added a second p element

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Testing Github</h1>
 
     <p>Testing Github ...</p>
+    <p>Testing Github, second p-element ...</p>
 
 
     <script src="scripts.js"></script>
