--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <p>Testing Github ...</p>
     <p>Testing Github, second p-element ...</p>
+    <p>Testing Github, created thirdBranch on Github</p>
 
 
     <script src="scripts.js"></script>
