created new p tag with text: created branch4 on Github

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p>Testing Github ...</p>
     <p>Testing Github, second p-element ...</p>
     <p>Testing Github, created thirdBranch on Github</p>
+    <p>Testing Github, created branch4 on Github</p>
 
 
     <script src="scripts.js"></script>
